# user-services/docs/swagger.json
@@ -46,7 +46,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_auth_api.ChangePasswordRequest"
+                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_auth_api.ChangePasswordRequest"
                         }
                     }
                 ],
@@ -62,7 +62,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_auth_api.ChangePasswordResponse"
+                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_auth_api.ChangePasswordResponse"
                                         }
                                     }
                                 }
@@ -110,7 +110,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_auth_api.LoginRequest"
+                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_auth_api.LoginRequest"
                         }
                     }
                 ],
@@ -126,7 +126,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_auth_api.TokenResponse"
+                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_auth_api.TokenResponse"
                                         }
                                     }
                                 }
@@ -181,7 +181,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_auth_api.LogoutResponse"
+                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_auth_api.LogoutResponse"
                                         }
                                     }
                                 }
@@ -230,7 +230,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_auth_api.LogoutResponse"
+                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_auth_api.LogoutResponse"
                                         }
                                     }
                                 }
@@ -272,7 +272,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_auth_api.RefreshTokenRequest"
+                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_auth_api.RefreshTokenRequest"
                         }
                     }
                 ],
@@ -288,7 +288,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_auth_api.TokenResponse"
+                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_auth_api.TokenResponse"
                                         }
                                     }
                                 }
@@ -402,7 +402,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_user_api.UserListResponseDoc"
+                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_user_api.UserListResponseDoc"
                                         }
                                     }
                                 }
@@ -453,7 +453,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_user_api.CreateUserRequest"
+                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_user_api.CreateUserRequest"
                         }
                     }
                 ],
@@ -469,7 +469,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_user_api.UserResponseDoc"
+                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_user_api.UserResponseDoc"
                                         }
                                     }
                                 }
@@ -539,7 +539,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_user_api.UserResponseDoc"
+                                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_user_api.UserResponseDoc"
                                         }
                                     }
                                 }
@@ -575,7 +575,7 @@
         }
     },
     "definitions": {
-        "github_com_aegiscore_user-services_internal_auth_api.ChangePasswordRequest": {
+        "github_com_aegiscore_user-services_internal_features_auth_api.ChangePasswordRequest": {
             "type": "object",
             "required": [
                 "new_password"
@@ -588,7 +588,7 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_auth_api.ChangePasswordResponse": {
+        "github_com_aegiscore_user-services_internal_features_auth_api.ChangePasswordResponse": {
             "type": "object",
             "properties": {
                 "changed": {
@@ -597,7 +597,7 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_auth_api.LoginRequest": {
+        "github_com_aegiscore_user-services_internal_features_auth_api.LoginRequest": {
             "type": "object",
             "required": [
                 "password",
@@ -617,7 +617,7 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_auth_api.LogoutResponse": {
+        "github_com_aegiscore_user-services_internal_features_auth_api.LogoutResponse": {
             "type": "object",
             "properties": {
                 "logged_out": {
@@ -626,7 +626,7 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_auth_api.RefreshTokenRequest": {
+        "github_com_aegiscore_user-services_internal_features_auth_api.RefreshTokenRequest": {
             "type": "object",
             "required": [
                 "refresh_token"
@@ -639,7 +639,7 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_auth_api.TokenResponse": {
+        "github_com_aegiscore_user-services_internal_features_auth_api.TokenResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -664,7 +664,7 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_user_api.CreateUserRequest": {
+        "github_com_aegiscore_user-services_internal_features_user_api.CreateUserRequest": {
             "type": "object",
             "required": [
                 "nickname",
@@ -686,7 +686,7 @@
                 "status": {
                     "allOf": [
                         {
-                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_user_api.UserStatus"
+                            "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_user_api.UserStatus"
                         }
                     ],
                     "example": 100
@@ -699,13 +699,13 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_user_api.UserListResponseDoc": {
+        "github_com_aegiscore_user-services_internal_features_user_api.UserListResponseDoc": {
             "type": "object",
             "properties": {
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_aegiscore_user-services_internal_user_api.UserResponseDoc"
+                        "$ref": "#/definitions/github_com_aegiscore_user-services_internal_features_user_api.UserResponseDoc"
                     }
                 },
                 "pagination": {
@@ -713,7 +713,7 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_user_api.UserResponseDoc": {
+        "github_com_aegiscore_user-services_internal_features_user_api.UserResponseDoc": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -742,7 +742,7 @@
                 }
             }
         },
-        "github_com_aegiscore_user-services_internal_user_api.UserStatus": {
+        "github_com_aegiscore_user-services_internal_features_user_api.UserStatus": {
             "type": "integer",
             "format": "int64",
             "enum": [
